--- a/templates/security/auth/signup.html
+++ b/templates/security/auth/signup.html
@@ -132,7 +132,7 @@
 
                 <!-- Botón de registro -->
                 <div class="flex justify-center mb-4">
-                    <button type="submit" class="text-white py-2 px-4 rounded-md shadow-md w-full flex items-center justify-center" style="background-image: url('{% static "img/login_boton.jpg" %}'); background-size: cover; background-position: center;">
+                    <button type="submit" class="text-white py-2 px-4 rounded-md shadow-md w-full flex items-center justify-center" style="background-image: url('{% static "img/login_boton.jpeg" %}'); background-size: cover; background-position: center;">
                         Registrarse
                     </button>
                 </div>
