--- a/templates/core/lecciones/numeros.html
+++ b/templates/core/lecciones/numeros.html
@@ -29,7 +29,7 @@
             <!-- Cuadro izquierdo -->
             <div class="bg-white rounded-lg shadow-lg p-6" style="width: 550px;">
                 <h2 class="text-2xl font-semibold mb-4" style="font-family: 'Jomolhari', serif;">Número Actual: <span id="numero-actual">{{ numero_actual }}</span></h2>
-                <img id="imagen-numero" src="{{ senal_detectada }}" alt="Imagen del Número {{ numero_actual }}" class="w-full h-auto">
+                <img id="imagen-numero" src="{{ senal_detectada }}" alt="Imagen del Número {{ numero_actual }}" class="w-90 h-75 object-contain mx-auto">
             </div>
 
             
